lib/libui/bottom_pane/snapshots/libui__bottom_pane__request_user_input__tests__request_user_input_multi_question_last.snap
---
source: lib/libui/bottom_pane/request_user_input.rs
expression: "render_to_first_char_string(&overlay, area)"
---
                                                                                                                        
  Question 2/2 (2 unanswered)                                                                                           
  Share details.                                                                                                        
                                                                                                                        
  › Type your answer (optional)                                                                                         
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  enter to submit all | ctrl + p / ctrl + n change question | esc to interrupt
