lib/libui/bottom_pane/snapshots/libui__bottom_pane__request_user_input__tests__request_user_input_unanswered_confirmation.snap
---
source: lib/libui/bottom_pane/request_user_input.rs
expression: "render_to_first_char_string(&overlay, area)"
---
                                                                                
  Submit with unanswered questions?                                             
  2 unanswered questions                                                        
                                                                                
  › 1. Proceed  Submit with 2 unanswered questions.                             
    2. Go back  Return to the first unanswered question.                        
                                                                                
                                                                                
                                                                                
                                                                                
  Press enter to confirm or esc to go back
